# xynenyx-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/clients/: __init__.py  llm.py  supabase.py
app/ingestion/: __init__.py  chunkers.py  html_parser.py  metadata_extractor.py  pipeline.py  rss_parser.py  scheduler.py
app/middleware/: __init__.py  logging.py
app/retrieval/: __init__.py  bm25_retriever.py  filters.py  hybrid_retriever.py  multi_query.py  reranker.py  retriever.py  vector_store.py
app/routers/: documents.py  feeds.py  query.py
app/schemas/: documents.py  errors.py  feeds.py  queries.py
app/services/: cache.py
tests/: __init__.py  conftest.py  test_api.py  test_feed_management.py  test_filters.py  test_hybrid_search.py  test_ingestion.py  test_metadata_extraction.py  test_pipeline.py  test_query_advanced.py  test_reranking.py  test_retrieval.py  test_scheduler.py
